Fix gap inside AboutMe block

--- a/src/components/blocks/about/style.module.css
+++ b/src/components/blocks/about/style.module.css
@@ -10,7 +10,7 @@
 
 .about__wrapper {
   display: grid;
-  grid-template-columns: 20vw 1fr;
+  grid-template-columns: 18vw 1fr;
   gap: 3%;
   margin-top: 4rem;
 }
@@ -48,7 +48,7 @@
   content: '— ';
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .about__wrapper {
     display: flex;
     flex-direction: column;
